4.2.0 broken on Intel Mac Pro, AMD D500 GPU. Cycles > GPU Compute #120046
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#120046
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS Monterey 12.7.4 (21H1123)
Graphics card: AMD FirePro D500 3 GB
Mac Pro (Late 2013)
2,7 GHz 12-Core Intel Xeon E5
64 GB 1866 MHz DDR3
AMD FirePro D500 3 GB
Blender Version
Broken: 4.2.0,
e6808cd558
, main, 03-29-2024Worked: 4.2.0,
02a488d0fe
, main, 03-24-2024Broken Since: 4.2.0,
ee38a7b723
, main, 03-27-2024**Fix #119906: Cycles compilation on device that don't use the light tree ** might be related and might have introduced this new issue
Short description of error
Blender fails to render (and viewport render) on Cycles when GPU Compute enabled.
Everything goes black on viewport. Look:
Render also fails:
Exact steps for others to reproduce the error
Launch Blender on default cube scene
Go to Render Properties and select Cycles and GPU Compute
Change Viewport Shading to Rendered... viewport goes all black.
If you try to Render the scene, it also fails to render.
4.2.0 broken on Intel Mac, AMD GPU. Render/Viewport Cycles > GPU Compute, Mac Pro, Monterey 12.7.4to 4.2.0 broken on Intel Mac, AMD GPU. Cycles > GPU Compute, Mac Pro, Monterey 12.7.44.2.0 broken on Intel Mac, AMD GPU. Cycles > GPU Compute, Mac Pro, Monterey 12.7.4to 4.2.0 broken on Intel Mac, AMD GPU. Cycles > GPU ComputeThis is unlikely, what's more likely is the changes that came before it,
082b68fcb9
,fdc2962beb
, introduced some sort of issue, but you couldn't test it until the fix from the commit you mentioneda4f1a52a5c
.Either way, using the system and Blender build found at the bottom of the comment, I ran these tests:
This testing points to the black rendering being another AMD GPU on macOS specific bug. @iss Can you test on your AMD GPU mac?
System Information
Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.2.0 Alpha, branch: main, commit date: 2024-03-29 02:29, hash:
3d2593b2296c
Can't reproduce with fresh alpha build.
Issue still present latest daily alpha build (
d7c718dfd4
) on my Mac Pro with AMD FirePro D500 on Monterey 12.7.4 (21H1123)It rendered fine until 4.2.0,
02a488d0fe
, main, 03-24-2024If I lower Performance to 1 thread, the render goes to full black just like the viewport
On '02a488d0fe2e' alpha daily build from 03-24-2024 it rendered an previewed on viewport just fine:
4.2.0 broken on Intel Mac, AMD GPU. Cycles > GPU Computeto 4.2.0 broken on Intel Mac Pro, AMD D500 GPU. Cycles > GPU Compute@Caco-Oportot Issues with Cycles Metal GPU rendering on AMD GPUs on macOS have been quite common recently. It seems to be that Apple has been providing very little support to fixing bugs with the Metal drivers and/or compilers for these AMD GPUs.
The only way for the Cycles developers to fix these issues is to re-arrange code, and disable code until it starts working again. But to do this the Cycles developers need access to hardware that can reproduce the issue. Sadly it doesn't seem like we have access to that hardware. So it may take a while for this issue to be fixed, if it is to be fixed at all. (Note: The Cycles developers were thinking about removing MacOS AMD GPU support from Cycles in 4.2 due to all the issues it keeps having)
Sorry for the inconvenience this causes.
@Alaska thank you for you honest reply. I thought there were more "Trashcan" (Mac Pro) users still, but it seems it´s not the case. Anyway, 4.1 would be good enough but it is also recently broken for this AMD system, not the same issue but metal related for sure. Please take a look: #119934
I am tentatively confirming this report.
While investigating #120126 we found out that some newer AMD GPUs on macOS (E.G. RX 580) also have this issue. However, even newer GPUs (E.G. Vega or RNDA1 did not has this issue).
There is still some investigation that needs to be done. For example when the RX 580 and Vega users ran this test, their Metal Language version was force set to 2.4. In a normal version of Blender 4.2, the Metal Language version for these users would be 3.1, which may or may not fix this issue. However I am waiting for !120299 to be merged into Blender before asking them to do further testing.
Just a note for @Caco-Oportot , in a normal versioin of Blender, the Metal Language version is determined by your macOS version. So macOS 12 uses 2.4, macOS 13 uses 3.0, and macOS 14 uses 3.1. If we find out that increasing the Metal Language version resolves this issue, then you may need to update your macOS version, assuming your mac still gets update.
Thank you @Alaska for taking the time to investigate further. Unfortunately my Mac Pro (Trashcan) does not get to run any macOS newer than 12.
I hope you find any workaround on the code that keeps us running 4.2.
Even 4.1 would be fine but also broken recently #119934
@Sergey I can report Cycles GPU Compute it still broken on 4.2.0 patch build #120299 PR120299 on my system:
System Information
Operating system: macOS Monterey 12.7.4 (21H1123)
Graphics card: AMD FirePro D500 3 GB
Mac Pro (Late 2013)
2,7 GHz 12-Core Intel Xeon E5
64 GB 1866 MHz DDR3
AMD FirePro D500 3 GB
@Caco-Oportot I should of been more clear. !120299 fixes a crashing issue on some AMD GPU Macs with macOS 14+. Since you are not on macOS 14, this does not benefit you. On a side note, since you weren't on macOS 14, you didn't have the crashing issue in the first place!
It seems that the issue you are experiencing (Cycles renders are black on AMD GPUs on macOS) is more wide spread that I thought with a Cycles developer (Sergey) able to reproduce the issue on a much more modern AMD GPU Mac (RDNA2 based AMD GPU Mac). So there is a increased chance that this issue can be investigated and fixed due to the wide spread impact and the developers having access to hardware to test it.
There is still the possibility that this issue doesn't get fixed and AMD GPU macOS support in Cycles will be removed in 4.2. But the final decision on whether or not to do this hasn't been made and discussion for what to do is planned to happen in the near future.
@Alaska thank you for clarifying. I can test (on my macOS 12 / AMD D500 GPU) any build you point me to if further investigation is done. Thanks!
I can confirm the new 4.2 alpha release from today is patched for the crashes.
It does have the blacked out GPU output on:
My iMac on latest Sonoma 14.4.1 +580X
and a 2019 MacPro on Ventura 13.6 +580X
EDIT: same on iMac Sonoma 14.4.1 with 570X
Same version (Intel version) runs fine on M2 Ultra GPU
Have some other GPU models on older Mac OS versions at my work place will try to find some time to test on some of them and report later.
EDIT2:
Tested a few more combos, all have blacked out GPU render and black Render Viewport on today's 4.2 alpha:
iMac Pro 2017 - Ventura 13.5.2 - Radeon Pro Vega 56
MacPro 2013 - Monterey 12.7.3 AMD FirePro D300
iMac Monterey 12.5.1 - AMD Radeon R9 M380
Alaska referenced this issue2024-04-10 10:52:00 +02:00
I can confirm it´s fixed on latest daily build
168f3beb16
Thank you very much @Sergey !